hbase 虎牙版本，合并社区pr,支持async

--- a/flink-connectors/flink-connector-hbase-2.2/pom.xml
+++ b/flink-connectors/flink-connector-hbase-2.2/pom.xml
@@ -410,7 +410,18 @@ under the License.
 			</exclusions>
 		</dependency>
 	</dependencies>
-
+	<distributionManagement>
+		<repository>
+			<id>huya-releases</id>
+			<name>Internal Releases</name>
+			<url>https://nexus.huya.com/repository/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>huya-snapshots</id>
+			<name>Internal snapshots</name>
+			<url>https://nexus.huya.com/repository/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 	<profiles>
 		<profile>
 			<id>java11</id>
