--- a/flink-connectors/pom.xml
+++ b/flink-connectors/pom.xml
@@ -78,6 +78,7 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-test-utils-junit</artifactId>
+			<version>${parent.version}</version>
 		</dependency>
 	</dependencies>
 
